# workhop_rl

./: .gitattributes  README.md  rl_ros2_new
install/: local_setup.sh  setup.sh
install/ros2_unitree_legged_msgs/share/ros2_unitree_legged_msgs/: package.sh
install/unitree_legged_real/lib/unitree_legged_real/: lcm_server  ros2_position_example  ros2_rl  ros2_rl_control  ros2_test  ros2_walk_example
install/unitree_legged_real/share/ament_index/resource_index/package_run_dependencies/: unitree_legged_real
install/unitree_legged_real/share/unitree_legged_real/: package.sh
install/unitree_rl_controller/include/unitree_rl_controller/unitree_rl_controller/: rl_agent.h
install/unitree_rl_controller/share/ament_index/resource_index/package_run_dependencies/: unitree_rl_controller
install/unitree_rl_controller/share/ament_index/resource_index/parent_prefix_path/: unitree_rl_controller
install/unitree_rl_controller/share/unitree_rl_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/unitree_rl_controller/share/unitree_rl_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake
log/: latest_build
src/unitree_rl_controller-ros2/: CMakeLists.txt  README.md  package.xml
src/unitree_rl_controller-ros2/include/unitree_rl_controller/: rl_agent.h
src/unitree_rl_controller-ros2/src/: rl_agent.cpp
src/unitree_rl_controller-ros2/weights/: config.yaml  policy_1.pt
src/unitree_ros2_to_real/: .gitmodules  CMakeLists.txt  README.md  ipconfig.sh
src/unitree_ros2_to_real/include/: convert.h  exponential_smoothing.h  mean_smoothing.h
src/unitree_ros2_to_real/src/: custom_udp.cpp  ros2_position_example.cpp  ros2_rl.cpp  ros2_rl_class.cpp  ros2_rl_control.cpp  ros2_test.cpp
src/unitree_ros2_to_real/unitree_legged_sdk/examples/: example_position.cpp  example_walk.cpp
