<?xml version="1.0"?>
<package format="2">
  <name>unitree_rl_controller</name>
  <version>0.0.0</version>
  <description>The unitree_rl_controller package</description>
  <maintainer email="starkit@todo.todo">starkit</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rcl</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rcl</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>ros2_unitree_legged_msgs</depend>
  <depend>eigen</depend>


  <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
